# cipher_tbt_agent

./: .env.example  .gitignore  BPC_CHECKLIST.md  BPC_COMPLETE_CHECKLIST.md  BUG_FIX_EXPLANATION.md  CLAUDE.md  CONTINUATION.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_AUDIT_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MINEDOJO.md  MISTAKES.md  NETWORK_PROPOSAL.md  README.md  REORG_PLAN.md  RESEARCH_NOTES.md  REWORK_PLAN.md  RUNNING_MNIST.md  STABILITY_FIXES_SUMMARY.md  STEP_B_HANDOFF.md  debug_cache_check.py  debug_cache_source.py  debug_eval_ans.py  debug_eval_synthesis.py  debug_trace_programs.py  debug_trace_write.py  debug_training.py  pyproject.toml  requirements.txt  test_pc_basic.py  train_mnist_pc.py
.claude/: launch.json  settings.local.json
configs/: default.yaml  gpt2_scale.yaml
docs/: GPT2_SCALE_MATH_CURRICULUM.md  causal_learning_research.md  network_architecture_diagram.md  pc_agent_studio_spec.md
experiments/: NOTES.md  binding_mqar.py  binding_rule.py  mamba_arc_diag.py
human_traces/: lockpath_1782857306.jsonl  lockpath_1782857916.jsonl  multikey_1782857687.jsonl  sokoban_1782857804.jsonl
lrpd/: __init__.py  alt_decompose.py  log_det.py  online_update.py  psd_bound.py  schur.py  woodbury.py
src/: agent.py  arc_offline.py  arc_run.py  arc_sdk.py  play.py
tests/: README.md  debug_training.py  debug_training_detailed.py  diagnose_error_rebound.py  phase0_digit_counting_fixed.py  phase0_digit_semantics.py  phase0_keyboard_based.py  phase0_motor_bottom.py  phase0_proper_architecture.py  test_activation_analysis.py  test_active_inference.py  (+29 more)
(+1079 files in other folders)
